# power_predictive_score

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  tox.ini
ppscore/: __init__.py  main.py
ppscore/core/: data_types.py  metrics.py  modelling.py  models.py  task_registry.py  validators.py
ppscore/scoring/: predictor.py
tests/: test_main.py
tests/core/: test_data_types.py  test_metrics.py  test_modelling.py  test_task_registry.py  test_validators.py
tests/scoring/: test_predictor.py
